--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -58,8 +58,8 @@ chatForm.addEventListener("submit", (e) => {
 
     socket.emit("chatMessage", username, msg);
 
-    e.target.elements.msg.value = "";
-    e.target.elements.msg.focus();
+    document.getElementById("text").value = "";
+    document.getElementById("text").focus();
 })
 
 function outputMessage(message){
