--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,9 +1,5 @@
+
+<div class="col-md-12 col-xl-5">
 <h1 style="text-align:center;">Velkommen til Kompis-chat</h1>
 <p class="mt-5 mb-5" style="text-align:center;">For å begynne kan du: <a href="users/login">Logge inn</a> eller <a href="users/register">Registere deg</a>.</p>
-<div style="width:50%;margin: auto; text-align:center;" class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Info:</strong>
-    <p>Brukernavn og passord blir lagret i database, passordet er kryptert, dvs. det er umulig å lese det opp for meg eller andre.</p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
 </div>
