--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,13 @@
 
+<style>
+@media only screen and (max-width: 670px) {
+  .col-5 {
+    width: 100%!important;
+  }
+}
+</style>
 
-
-<div class="col-5 dh-login-content">
+<div class="col-md-12 col-xl-5">
     <h1>Kompis-chat login</h1>
     <%- include ("./partials/messages") %>
     <form action="/users/login" method="POST">
