--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,5 +1,7 @@
 
 <div class="col-md-12 col-xl-5">
-<h1 style="text-align:center;">Velkommen til Kompis-chat</h1>
+<img style="display:block; margin:auto; width:300px;" src="kompis chat logo.jpg" alt="velkommen">
 <p class="mt-5 mb-5" style="text-align:center;">For å begynne kan du: <a href="users/login">Logge inn</a> eller <a href="users/register">Registere deg</a>.</p>
+<br>
+<p style="text-align:center;">Denne chat siden er laget av &copy; Daniel Høifødt.</p>
 </div>
