--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-12 col-xl-5">
+<div class="col-md-12 col-xl-5 center-block">
         <div class="dh-login-content">
             <h1>Kompis-chat registrer</h1>
             <%- include ("./partials/messages") %>
