--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 }
 </style>
 
-<div class="col-md-12 col-xl-5">
+<div class="col-md-12 col-xl-5 center-block">
     <h1>Kompis-chat login</h1>
     <%- include ("./partials/messages") %>
     <form action="/users/login" method="POST">
