--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,6 @@
 
-<div class="col-md-12 col-xl-5">
-<img style="display:block; margin:auto; width:300px;" src="kompis chat logo.jpg" alt="velkommen">
+<div class="col-md-12 col-xl-12">
+<img style="display:block; margin:auto; width:300px;" class="mt-5" src="kompis chat logo.jpg" alt="velkommen">
 <p class="mt-5 mb-5" style="text-align:center;">For å begynne kan du: <a href="users/login">Logge inn</a> eller <a href="users/register">Registere deg</a>.</p>
 <br>
 <p style="text-align:center;">Denne chat siden er laget av &copy; Daniel Høifødt.</p>
