--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
 </div>
 <form id="chat-form">
     <div class="form-group mt-3">
-        <input type="text" placeholder="Skriv beskjed..." id="text" style="border-radius:5px;padding:5px; width:94%;">
+        <input type="text" autocomplete="off" placeholder="Skriv beskjed..." id="text" style="border-radius:5px;padding:5px; width:94%;">
         <input type="submit" class="btn btn-primary" value="Send">
     </div>
     <br>
