--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,10 +1,10 @@
 
 <div class="wrapper">
 <h4>Hei, <span id="username"><%= username %></span>!</h4>
-<div style="max-height: 450px; overflow-y: scroll;" id="output">
+<div style="max-height:300px;overflow-y: scroll;" id="output">
 </div>
 <form id="chat-form">
-    <div class="input-group mt-3">
+    <div class="input-group">
         <input type="text" class="form-control form-control-sm" autocomplete="off" placeholder="Skriv beskjed..." id="text">
         <span class="input-group-btn">
             <input type="submit" class="btn btn-primary btn-sm" value="Send">
