--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,12 @@
+<style>
+body{
+    background-image: url("background_kompis-chat.jpg");
+    background-size: cover;
+    font-family: monospace !important;
+    font-size: 14px !important;
+}
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
